tests/liquid/neg/objects/obj-07.js

/*@ a :: { { d: { number + boolean | true }  } | true } */
var a  = {    };


